# untyped-lambda-calculus

./: README.md  test.sh  untyped-lambda-calculus.cabal
src/: CodeGen.hs  Foundation.hs  Semantics.hs  Syntax.hs
test/: Main.hs  Termination.hs
test/Answers/: Exercise1.hs  Exercise10.hs  Exercise2.hs  Exercise4.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs
